--- a/.gitignore
+++ b/.gitignore
@@ -54,8 +54,10 @@ htmlcov/
 .dmypy.json
 dmypy.json
 
-# Historical data (large CSV files)
-historical_data/
+# Historical data (large CSV files) - environment-specific
+historical_data/prod/
+historical_data/test/
+historical_data/dev/
 
 # Build artifacts
 build/
