feat: enhance dashboard UI and improve data pipeline
- Redesign dashboard to match Portfolio Builder layout with KPIs and panels
- Add left panel navigation with Portfolio, Watchlist, Statistics, Trade History, Price Alerts
- Add pin functionality to lock left panel in place
- Remove Portfolio Builder icon and make it non-clickable
- Split global CSS into component-specific files (layout, left-panel, search-bar, dashboard)
- Add tqdm progress bars for market fetching, order book collection, and CSV uploads
- Suppress verbose HTTP logging to show only tqdm progress bars
- Add database server information to connection logs (host:port)
- Require all database environment variables (no defaults)
- Update data pipeline to require --trade_data or --order_book switches
- Update launch configurations for new pipeline switches

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,12 +14,46 @@
             "cwd": "${workspaceFolder}"
         },
         {
-            "name": "Python: Data Pipeline",
+            "name": "Python: Data Pipeline - Trade Data",
             "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/src/polymarket/data_pipeline.py",
             "console": "integratedTerminal",
             "justMyCode": true,
+            "args": [
+                "--trade_data"
+            ],
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}"
+            },
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "name": "Python: Data Pipeline - Order Book",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/src/polymarket/data_pipeline.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": [
+                "--order_book"
+            ],
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}"
+            },
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "name": "Python: Data Pipeline - Both",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/src/polymarket/data_pipeline.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": [
+                "--trade_data",
+                "--order_book"
+            ],
             "env": {
                 "PYTHONPATH": "${workspaceFolder}"
             },
