--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -8,3 +8,6 @@ psycopg2-binary>=2.9.0
 sqlalchemy>=2.0.0
 apache-airflow>=2.8.0
 websocket-client>=1.6.0
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+redis>=5.0.0
