Gamma API integration: gamma_markets, daily refresh, search by volume_24hr
- Add gamma_client: fetch_all_events (paginate), gamma_events_to_trade_data_rows
- New gamma_markets table (snake_case): volume_24hr, volume_1wk/1mo/1yr, liquidity, etc.
- run_gamma_fetch_and_save shared by CLI and DAG; pagination verification logging
- Truncate gamma_markets before upload (daily refresh); keep CSVs on disk
- DAG schedule 1am daily (0 1 * * *); Gamma collect+upload uses shared helper
- Search orders by volume_24hr DESC; orderbook/launch config updates

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,12 +20,30 @@
             "program": "${workspaceFolder}/src/polymarket/data_pipeline.py",
             "console": "integratedTerminal",
             "justMyCode": true,
-            "args": [
-                "--trade_data"
-            ],
-            "env": {
-                "PYTHONPATH": "${workspaceFolder}"
-            },
+            "args": ["--trade_data"],
+            "env": { "PYTHONPATH": "${workspaceFolder}" },
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "name": "Python: Data Pipeline - Gamma",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/src/polymarket/data_pipeline.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": ["--gamma"],
+            "env": { "PYTHONPATH": "${workspaceFolder}" },
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "name": "Python: Data Pipeline - Trade Data + Gamma",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/src/polymarket/data_pipeline.py",
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "args": ["--trade_data", "--gamma"],
+            "env": { "PYTHONPATH": "${workspaceFolder}" },
             "cwd": "${workspaceFolder}"
         },
         {
@@ -44,19 +62,14 @@
             "cwd": "${workspaceFolder}"
         },
         {
-            "name": "Python: Data Pipeline - Both",
+            "name": "Python: Data Pipeline - Trade Data + Order Book",
             "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/src/polymarket/data_pipeline.py",
             "console": "integratedTerminal",
             "justMyCode": true,
-            "args": [
-                "--trade_data",
-                "--order_book"
-            ],
-            "env": {
-                "PYTHONPATH": "${workspaceFolder}"
-            },
+            "args": ["--trade_data", "--order_book"],
+            "env": { "PYTHONPATH": "${workspaceFolder}" },
             "cwd": "${workspaceFolder}"
         },
         {
@@ -89,5 +102,5 @@
             },
             "cwd": "${workspaceFolder}"
         }
-            ]
-    }
+    ]
+}
